# server-actix-web

./: .gitignore  Cargo.toml  app.db
migrations/2022-02-25-024348_links/: up.sql
src/: main.rs  models.rs
templates/: index.html
